tests/ui/type-qpath-eof2.stderr
error: no rules expected the token `T`
 --> $DIR/type-qpath-eof2.rs:5:17
  |
5 |     input = [{ <T }]
  |                 ^ no rules expected this token in macro call
